# Vireo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: docs
Writerside/: c.list  redirection-rules.xml  v.list  v.tree  writerside.cfg
Writerside/topics/: Application-Lifecycle.md  Components.md  Core-Concepts.md  Dynamic-UI.md  Getting-Started.md  Layout.md  Project-Setup.md  Publishing.md  Runtime-Tree.md  Styling.md  Utilities.md  Vireo.md
cmake/: vireo.pc.in  vireoConfig.cmake.in
docs/: CNAME  publishing.md
examples/: dsl_test.cpp  minimal.cpp
examples/assets/: vireo.xpm
include/vireo/: version.hpp  vireo.hpp
include/vireo/core/: button.h  center.h  checkbox.h  color.hpp  component.h  componentbuilder.h  divider.h  export.hpp  foreach.h  geometry.hpp  horizontalstack.h  image.h  library.hpp  panel.h  screen.h  spacer.h  style.h  text.h  verticalstack.h  when.h
include/vireo/platform/: renderer.hpp  sdl_context.hpp  window.hpp
include/vireo/ui/: widget.hpp
src/core/: button.cpp  center.cpp  checkbox.cpp  component.cpp  divider.cpp  horizontalstack.cpp  image.cpp  library.cpp  panel.cpp  screen.cpp  spacer.cpp  text.cpp  verticalstack.cpp
src/platform/: renderer.cpp  sdl_context.cpp  sdl_error.hpp  window.cpp
src/ui/: widget.cpp
tests/: smoke.cpp
